# books_uniq

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  run.py  test_js_syntax.js
.github/workflows/: docker-build.yml
src/books_uniq/: __init__.py  config.py  main.py
src/books_uniq/services/: __init__.py  embedding_service.py  excel_processor.py  vector_store.py
src/books_uniq/templates/: database.html  index.html
